--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:theme="@style/Theme.AppReservasCAB"
         tools:targetApi="31">
         <activity
-            android:name=".OlvidasteContrasena"
+            android:name=".CambiarContrasena"
+            android:exported="false" />
+        <activity
+            android:name=".RCCorreoEnviado"
+            android:exported="false" />
+        <activity
+            android:name=".RecuperarContrasena"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
