--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    
+    <uses-permission android:name="android.permission.INTERNET"/>
+<!--    android:networkSecurityConfig="@xml/network_security_config"-->
 
     <application
         android:allowBackup="true"
@@ -11,18 +14,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppReservasCAB"
+        android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
         <activity
-            android:name=".xd"
+            android:name=".PerfilAprendizInstru"
             android:exported="false" />
-        <activity
-            android:name=".Usuarios.xd"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".SolicitudReservas"-->
+<!--            android:exported="false" />-->
+<!--        <activity-->
+<!--            android:name=".xd"-->
+<!--            android:exported="false" />-->
+<!--        <activity-->
+<!--            android:name="."-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".InstruMisReservas"
             android:exported="false" />
         <activity
-            android:name=".ReservasInstru"
+            android:name=".SolicitudReservas"
             android:exported="false"
             android:theme="@style/Theme.AppReservasCAB" />
         <activity
