--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
     
     <uses-permission android:name="android.permission.INTERNET"/>
-<!--    android:networkSecurityConfig="@xml/network_security_config"-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <!--    android:networkSecurityConfig="@xml/network_security_config"-->
 
     <application
         android:allowBackup="true"
