--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.amkj.appreservascab">
+    package="com.amkj.appreservascab" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -17,7 +17,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppReservasCAB"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".notificaciones"
+            android:exported="false" />
         <activity
             android:name=".CrearEquipos"
             android:exported="false" />
@@ -46,8 +49,11 @@
             android:name=".RecuperarContrasena"
             android:exported="false" />
         <activity
+            android:name=".ActividadNotificaciones"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
