Agregando más informacion de equipos y ambientes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
         android:theme="@style/Theme.AppReservasCAB"
         tools:targetApi="31">
         <activity
+            android:name=".DetalleEquipo"
+            android:exported="false" />
+        <activity
+            android:name=".DetalleAmbiente"
+            android:exported="false" />
+        <activity
             android:name=".CrearEquipos"
             android:exported="false" />
         <activity
