--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:theme="@style/Theme.AppReservasCAB"
         tools:targetApi="31">
         <activity
+            android:name=".CrearUsuario"
+            android:exported="false" />
+        <activity
             android:name=".SolicitudReservasEquipo"
             android:exported="false" />
         <activity
