--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
         android:theme="@style/Theme.AppReservasCAB"
         tools:targetApi="31">
         <activity
+            android:name=".EditarUsuario"
+            android:exported="false"
+           />
+        <activity
             android:name=".CrearUsuario"
             android:exported="false" />
         <activity
@@ -26,7 +30,7 @@
             android:exported="false" />
         <activity
             android:name=".ActividadNotificaciones"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".DetalleEquipo"
             android:exported="false" />
